--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,11 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+  packages: write
+  actions: read
+
 jobs:
   release:
     runs-on: ubuntu-latest
