--- a/test/ToListinator.TestApp/nuget.config
+++ b/test/ToListinator.TestApp/nuget.config
@@ -3,6 +3,6 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="local" value="..\..\src\ToListinator\bin\Release" />
+    <add key="local" value="..\..\src\ToListinator.Package\bin\Release" />
   </packageSources>
 </configuration>
