--- a/test/ToListinator.CodeFixes.Tests/ToListinator.CodeFixes.Tests.csproj
+++ b/test/ToListinator.CodeFixes.Tests/ToListinator.CodeFixes.Tests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ToListinator\ToListinator.csproj" />
+    <ProjectReference Include="..\..\src\ToListinator.Analyzers\ToListinator.Analyzers.csproj" />
     <ProjectReference Include="..\..\src\ToListinator.CodeFixes\ToListinator.CodeFixes.csproj" />
   </ItemGroup>
 
