--- a/test/ToListinator.Tests/ToListinator.Tests.csproj
+++ b/test/ToListinator.Tests/ToListinator.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\ToListinator.Analyzers\ToListinator.Analyzers.csproj" />
+    <ProjectReference Include="..\..\src\ToListinator.CodeFixes\ToListinator.CodeFixes.csproj" />
   </ItemGroup>
 
 </Project>
