--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,8 +19,10 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3" />
+  </ItemGroup>
+  <ItemGroup>
     
     <!-- Utilities -->
-    <PackageVersion Include="PolySharp" Version="1.15.0" />
+    <GlobalPackageReference Include="PolySharp" Version="1.15.0" />
   </ItemGroup>
 </Project>
