--- a/test/ToListinator.TestApp/ToListinator.TestApp.csproj
+++ b/test/ToListinator.TestApp/ToListinator.TestApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ToListinator" Version="1.0.0" />
+    <PackageReference Include="ToListinator" VersionOverride="1.0.0"/>
   </ItemGroup>
 
 </Project>
