--- a/test/ToListinator.TestApp/nuget.config
+++ b/test/ToListinator.TestApp/nuget.config
@@ -2,7 +2,11 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="local" value="..\..\src\ToListinator\bin\Debug" />
   </packageSources>
+  <packageSourceMapping>
+    <packageSource key="local">
+      <package pattern="ToListinator" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
