--- a/.editorconfig
+++ b/.editorconfig
@@ -135,3 +135,6 @@ dotnet_naming_style.pascal_case.capitalization = pascal_case
 
 dotnet_naming_style.prefix_interface_with_i.capitalization = pascal_case
 dotnet_naming_style.prefix_interface_with_i.required_prefix = I
+
+# Diagnostics
+dotnet_diagnostic.IDE0008.severity = none
