--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,7 @@ root = true
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+end_of_line = lf
 
 # Code files
 [*.{cs,csx,vb,vbx}]
